compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac
Rule 2     programa1 -> vars add_calc_vars_ac go_to_main_ac funcion
Rule 3     add_main_jump_ac -> empty
Rule 4     calc_temp_ac -> empty
Rule 5     add_calc_vars_ac -> empty
Rule 6     go_to_main_ac -> empty
Rule 7     add_DirFunc -> ID
Rule 8     bloque -> LBRACE bloque1 return RBRACE
Rule 9     bloque1 -> estatuto bloque1
Rule 10    bloque1 -> empty
Rule 11    return -> RETURN LPAREN expresion RPAREN SEMICOLON return_ac
Rule 12    return -> empty
Rule 13    return_ac -> empty
Rule 14    tipo -> INT
Rule 15    tipo -> FLOAT
Rule 16    tipo -> CHAR
Rule 17    tipo_funcion -> tipo
Rule 18    tipo_funcion -> VOID
Rule 19    dim -> LBRACK exp RBRACK dim1
Rule 20    dim -> empty
Rule 21    dim1 -> LBRACK exp RBRACK
Rule 22    dim1 -> empty
Rule 23    dim_access -> verify_dims_ac exp RBRACK verify_range_ac dim_access1 calc_virtual_addess_ac
Rule 24    dim_access -> empty
Rule 25    verify_dims_ac -> LBRACK
Rule 26    verify_range_ac -> empty
Rule 27    calc_virtual_addess_ac -> empty
Rule 28    dim_access1 -> LBRACK exp RBRACK dim_2_ac
Rule 29    dim_access1 -> empty
Rule 30    dim_2_ac -> empty
Rule 31    vars -> vars_order vars
Rule 32    vars -> empty
Rule 33    vars_order -> VAR tipo COLON vars0 SEMICOLON
Rule 34    vars0 -> ID dim vars1
Rule 35    vars1 -> COMMA ID dim vars1
Rule 36    vars1 -> empty
Rule 37    funcion -> funcion2 funcion
Rule 38    funcion -> empty
Rule 39    funcion1 -> tipo_funcion MODULE ID
Rule 40    funcion2 -> funcion1 LPAREN vars add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac
Rule 41    add_init_quad_temp_count_ac -> empty
Rule 42    end_func_ac -> empty
Rule 43    add_param_tb_ac -> empty
Rule 44    add_cont_vars_ac -> empty
Rule 45    estatuto -> asignacion
Rule 46    estatuto -> condicion
Rule 47    estatuto -> write
Rule 48    estatuto -> read
Rule 49    estatuto -> forloop
Rule 50    estatuto -> whileloop
Rule 51    estatuto -> llamar_funcion
Rule 52    asignacion -> push_id_assign dim_access EQUALS expresion SEMICOLON
Rule 53    expresion -> expresion_cmp expresion1
Rule 54    expresion1 -> push_and_or_ac expresion_cmp validar_and_or_ac expresion1
Rule 55    expresion1 -> empty
Rule 56    push_and_or_ac -> AND
Rule 57    push_and_or_ac -> OR
Rule 58    validar_and_or_ac -> empty
Rule 59    expresion_cmp -> exp expresion_cmp1
Rule 60    expresion_cmp1 -> push_cmp_ac exp validar_comparacion_ac
Rule 61    expresion_cmp1 -> empty
Rule 62    push_cmp_ac -> GRTR
Rule 63    push_cmp_ac -> LESS
Rule 64    push_cmp_ac -> EQEQ
Rule 65    push_cmp_ac -> NOTEQ
Rule 66    validar_comparacion_ac -> empty
Rule 67    exp -> termino check_op_exp exp1
Rule 68    exp1 -> push_op_exp exp
Rule 69    exp1 -> empty
Rule 70    push_op_exp -> PLUS
Rule 71    push_op_exp -> MINUS
Rule 72    check_op_exp -> empty
Rule 73    termino -> factor check_op_term termino1
Rule 74    termino1 -> push_op_term termino
Rule 75    termino1 -> empty
Rule 76    push_op_term -> TIMES
Rule 77    push_op_term -> DIV
Rule 78    check_op_term -> empty
Rule 79    factor -> LPAREN expresion RPAREN
Rule 80    factor -> varCte
Rule 81    factor -> push_id factor1
Rule 82    factor1 -> llamar_funcion_factor
Rule 83    factor1 -> dim_access
Rule 84    factor1 -> DET det_ac
Rule 85    factor1 -> TRAN tran_ac
Rule 86    factor1 -> INV inv_ac
Rule 87    det_ac -> empty
Rule 88    inv_ac -> push_id_inv det_ac
Rule 89    push_id_inv -> empty
Rule 90    tran_ac -> empty
Rule 91    push_id -> ID
Rule 92    push_id_assign -> ID
Rule 93    llamar_funcion_factor -> verificar_funcion_ac_factor llamar_funcion1 RPAREN validate_num_param_ac
Rule 94    verificar_funcion_ac_factor -> LPAREN
Rule 95    varCte -> constructIntCons
Rule 96    varCte -> constructFloatCons
Rule 97    varCte -> constructCharCons
Rule 98    constructIntCons -> INTCTE
Rule 99    constructFloatCons -> FLOATCTE
Rule 100   constructCharCons -> CHARCTE
Rule 101   llamar_funcion -> verificar_funcion_ac llamar_funcion1 RPAREN validate_num_param_ac SEMICOLON
Rule 102   llamar_funcion1 -> exp validate_params_ac llamar_funcion2
Rule 103   llamar_funcion1 -> empty
Rule 104   llamar_funcion2 -> COMMA exp validate_params_ac llamar_funcion2
Rule 105   llamar_funcion2 -> empty
Rule 106   verificar_funcion_ac -> ID LPAREN
Rule 107   validate_params_ac -> empty
Rule 108   validate_num_param_ac -> empty
Rule 109   read -> READ LPAREN read1 RPAREN SEMICOLON
Rule 110   read1 -> push_id dim_access read_ac read2
Rule 111   read2 -> COMMA push_id dim_access read_ac read2
Rule 112   read2 -> empty
Rule 113   read_ac -> empty
Rule 114   write -> WRITE LPAREN write1 write2 RPAREN SEMICOLON
Rule 115   write1 -> expresion
Rule 116   write1 -> agregarStringCTE
Rule 117   agregarStringCTE -> STRINGCTE
Rule 118   write2 -> COMMA write1 write2
Rule 119   write2 -> empty
Rule 120   condicion -> IF LPAREN expresion RPAREN checkIfBool THEN bloque condicion1 endIf SEMICOLON
Rule 121   checkIfBool -> empty
Rule 122   endIf -> empty
Rule 123   condicion1 -> ELSE elseJump bloque
Rule 124   condicion1 -> empty
Rule 125   elseJump -> empty
Rule 126   whileloop -> WHILE push_return_ac expresion handle_exp_ac DO bloque end_while_ac
Rule 127   push_return_ac -> empty
Rule 128   handle_exp_ac -> empty
Rule 129   end_while_ac -> empty
Rule 130   forloop -> FOR asignacion_for_ac TO exp DO do_ac bloque for_end_ac
Rule 131   asignacion_for_ac -> ID EQUALS expresion
Rule 132   do_ac -> empty
Rule 133   for_end_ac -> empty
Rule 134   empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
CHAR                 : 16
CHARCTE              : 100
COLON                : 33
COMMA                : 35 104 111 118
DET                  : 84
DIV                  : 77
DO                   : 126 130
ELSE                 : 123
EQEQ                 : 64
EQUALS               : 52 131
FLOAT                : 15
FLOATCTE             : 99
FOR                  : 130
GRTR                 : 62
ID                   : 7 34 35 39 91 92 106 131
IF                   : 120
INT                  : 14
INTCTE               : 98
INV                  : 86
LBRACE               : 8
LBRACK               : 19 21 25 28
LESS                 : 63
LPAREN               : 1 11 40 79 94 106 109 114 120
MAIN                 : 1
MINUS                : 71
MODULE               : 39
NOTEQ                : 65
OR                   : 57
PLUS                 : 70
PROGRAM              : 1
RBRACE               : 8
RBRACK               : 19 21 23 28
READ                 : 109
RETURN               : 11
RPAREN               : 1 11 40 79 93 101 109 114 120
SEMICOLON            : 1 11 33 40 52 101 109 114 120
STRINGCTE            : 117
THEN                 : 120
TIMES                : 76
TO                   : 130
TRAN                 : 85
VAR                  : 33
VOID                 : 18
WHILE                : 126
WRITE                : 114
error                : 

Nonterminals, with rules where they appear

add_DirFunc          : 1
add_calc_vars_ac     : 2
add_cont_vars_ac     : 40
add_init_quad_temp_count_ac : 40
add_main_jump_ac     : 1
add_param_tb_ac      : 40
agregarStringCTE     : 116
asignacion           : 45
asignacion_for_ac    : 130
bloque               : 1 40 120 123 126 130
bloque1              : 8 9
calc_temp_ac         : 1
calc_virtual_addess_ac : 23
checkIfBool          : 120
check_op_exp         : 67
check_op_term        : 73
condicion            : 46
condicion1           : 120
constructCharCons    : 97
constructFloatCons   : 96
constructIntCons     : 95
det_ac               : 84 88
dim                  : 34 35
dim1                 : 19
dim_2_ac             : 28
dim_access           : 52 83 110 111
dim_access1          : 23
do_ac                : 130
elseJump             : 123
empty                : 3 4 5 6 10 12 13 20 22 24 26 27 29 30 32 36 38 41 42 43 44 55 58 61 66 69 72 75 78 87 89 90 103 105 107 108 112 113 119 121 122 124 125 127 128 129 132 133
endIf                : 120
end_func_ac          : 40
end_while_ac         : 126
estatuto             : 9
exp                  : 19 21 23 28 59 60 68 102 104 130
exp1                 : 67
expresion            : 11 52 79 115 120 126 131
expresion1           : 53 54
expresion_cmp        : 53 54
expresion_cmp1       : 59
factor               : 73
factor1              : 81
for_end_ac           : 130
forloop              : 49
funcion              : 2 37
funcion1             : 40
funcion2             : 37
go_to_main_ac        : 2
handle_exp_ac        : 126
inv_ac               : 86
llamar_funcion       : 51
llamar_funcion1      : 93 101
llamar_funcion2      : 102 104
llamar_funcion_factor : 82
programa             : 0
programa1            : 1
push_and_or_ac       : 54
push_cmp_ac          : 60
push_id              : 81 110 111
push_id_assign       : 52
push_id_inv          : 88
push_op_exp          : 68
push_op_term         : 74
push_return_ac       : 126
read                 : 48
read1                : 109
read2                : 110 111
read_ac              : 110 111
return               : 8
return_ac            : 11
termino              : 67 74
termino1             : 73
tipo                 : 17 33
tipo_funcion         : 39
tran_ac              : 85
validar_and_or_ac    : 54
validar_comparacion_ac : 60
validate_num_param_ac : 93 101
validate_params_ac   : 102 104
varCte               : 80
vars                 : 2 31 40 40
vars0                : 33
vars1                : 34 35
vars_order           : 31
verificar_funcion_ac : 101
verificar_funcion_ac_factor : 93
verify_dims_ac       : 23
verify_range_ac      : 23
whileloop            : 50
write                : 47
write1               : 114 118
write2               : 114 118

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac
    (7) add_DirFunc -> . ID

    ID              shift and go to state 4

    add_DirFunc                    shift and go to state 3

state 3

    (1) programa -> PROGRAM add_DirFunc . SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac

    SEMICOLON       shift and go to state 5


state 4

    (7) add_DirFunc -> ID .

    SEMICOLON       reduce using rule 7 (add_DirFunc -> ID .)


state 5

    (1) programa -> PROGRAM add_DirFunc SEMICOLON . programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac
    (2) programa1 -> . vars add_calc_vars_ac go_to_main_ac funcion
    (31) vars -> . vars_order vars
    (32) vars -> . empty
    (33) vars_order -> . VAR tipo COLON vars0 SEMICOLON
    (134) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 134 (empty -> .)
    INT             reduce using rule 134 (empty -> .)
    FLOAT           reduce using rule 134 (empty -> .)
    CHAR            reduce using rule 134 (empty -> .)
    MAIN            reduce using rule 134 (empty -> .)

    programa1                      shift and go to state 6
    vars                           shift and go to state 7
    vars_order                     shift and go to state 8
    empty                          shift and go to state 9

state 6

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 . MAIN LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac

    MAIN            shift and go to state 11


state 7

    (2) programa1 -> vars . add_calc_vars_ac go_to_main_ac funcion
    (5) add_calc_vars_ac -> . empty
    (134) empty -> .

    VOID            reduce using rule 134 (empty -> .)
    INT             reduce using rule 134 (empty -> .)
    FLOAT           reduce using rule 134 (empty -> .)
    CHAR            reduce using rule 134 (empty -> .)
    MAIN            reduce using rule 134 (empty -> .)

    add_calc_vars_ac               shift and go to state 12
    empty                          shift and go to state 13

state 8

    (31) vars -> vars_order . vars
    (31) vars -> . vars_order vars
    (32) vars -> . empty
    (33) vars_order -> . VAR tipo COLON vars0 SEMICOLON
    (134) empty -> .

    VAR             shift and go to state 10
    VOID            reduce using rule 134 (empty -> .)
    INT             reduce using rule 134 (empty -> .)
    FLOAT           reduce using rule 134 (empty -> .)
    CHAR            reduce using rule 134 (empty -> .)
    MAIN            reduce using rule 134 (empty -> .)
    RPAREN          reduce using rule 134 (empty -> .)
    LBRACE          reduce using rule 134 (empty -> .)

    vars_order                     shift and go to state 8
    vars                           shift and go to state 14
    empty                          shift and go to state 9

state 9

    (32) vars -> empty .

    VOID            reduce using rule 32 (vars -> empty .)
    INT             reduce using rule 32 (vars -> empty .)
    FLOAT           reduce using rule 32 (vars -> empty .)
    CHAR            reduce using rule 32 (vars -> empty .)
    MAIN            reduce using rule 32 (vars -> empty .)
    RPAREN          reduce using rule 32 (vars -> empty .)
    LBRACE          reduce using rule 32 (vars -> empty .)


state 10

    (33) vars_order -> VAR . tipo COLON vars0 SEMICOLON
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 15

state 11

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN . LPAREN RPAREN add_main_jump_ac bloque calc_temp_ac

    LPAREN          shift and go to state 19


state 12

    (2) programa1 -> vars add_calc_vars_ac . go_to_main_ac funcion
    (6) go_to_main_ac -> . empty
    (134) empty -> .

    VOID            reduce using rule 134 (empty -> .)
    INT             reduce using rule 134 (empty -> .)
    FLOAT           reduce using rule 134 (empty -> .)
    CHAR            reduce using rule 134 (empty -> .)
    MAIN            reduce using rule 134 (empty -> .)

    go_to_main_ac                  shift and go to state 20
    empty                          shift and go to state 21

state 13

    (5) add_calc_vars_ac -> empty .

    VOID            reduce using rule 5 (add_calc_vars_ac -> empty .)
    INT             reduce using rule 5 (add_calc_vars_ac -> empty .)
    FLOAT           reduce using rule 5 (add_calc_vars_ac -> empty .)
    CHAR            reduce using rule 5 (add_calc_vars_ac -> empty .)
    MAIN            reduce using rule 5 (add_calc_vars_ac -> empty .)


state 14

    (31) vars -> vars_order vars .

    VOID            reduce using rule 31 (vars -> vars_order vars .)
    INT             reduce using rule 31 (vars -> vars_order vars .)
    FLOAT           reduce using rule 31 (vars -> vars_order vars .)
    CHAR            reduce using rule 31 (vars -> vars_order vars .)
    MAIN            reduce using rule 31 (vars -> vars_order vars .)
    RPAREN          reduce using rule 31 (vars -> vars_order vars .)
    LBRACE          reduce using rule 31 (vars -> vars_order vars .)


state 15

    (33) vars_order -> VAR tipo . COLON vars0 SEMICOLON

    COLON           shift and go to state 22


state 16

    (14) tipo -> INT .

    COLON           reduce using rule 14 (tipo -> INT .)
    MODULE          reduce using rule 14 (tipo -> INT .)


state 17

    (15) tipo -> FLOAT .

    COLON           reduce using rule 15 (tipo -> FLOAT .)
    MODULE          reduce using rule 15 (tipo -> FLOAT .)


state 18

    (16) tipo -> CHAR .

    COLON           reduce using rule 16 (tipo -> CHAR .)
    MODULE          reduce using rule 16 (tipo -> CHAR .)


state 19

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN . RPAREN add_main_jump_ac bloque calc_temp_ac

    RPAREN          shift and go to state 23


state 20

    (2) programa1 -> vars add_calc_vars_ac go_to_main_ac . funcion
    (37) funcion -> . funcion2 funcion
    (38) funcion -> . empty
    (40) funcion2 -> . funcion1 LPAREN vars add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac
    (134) empty -> .
    (39) funcion1 -> . tipo_funcion MODULE ID
    (17) tipo_funcion -> . tipo
    (18) tipo_funcion -> . VOID
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    MAIN            reduce using rule 134 (empty -> .)
    VOID            shift and go to state 30
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    funcion                        shift and go to state 24
    funcion2                       shift and go to state 25
    empty                          shift and go to state 26
    funcion1                       shift and go to state 27
    tipo_funcion                   shift and go to state 28
    tipo                           shift and go to state 29

state 21

    (6) go_to_main_ac -> empty .

    VOID            reduce using rule 6 (go_to_main_ac -> empty .)
    INT             reduce using rule 6 (go_to_main_ac -> empty .)
    FLOAT           reduce using rule 6 (go_to_main_ac -> empty .)
    CHAR            reduce using rule 6 (go_to_main_ac -> empty .)
    MAIN            reduce using rule 6 (go_to_main_ac -> empty .)


state 22

    (33) vars_order -> VAR tipo COLON . vars0 SEMICOLON
    (34) vars0 -> . ID dim vars1

    ID              shift and go to state 32

    vars0                          shift and go to state 31

state 23

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN . add_main_jump_ac bloque calc_temp_ac
    (3) add_main_jump_ac -> . empty
    (134) empty -> .

    LBRACE          reduce using rule 134 (empty -> .)

    add_main_jump_ac               shift and go to state 33
    empty                          shift and go to state 34

state 24

    (2) programa1 -> vars add_calc_vars_ac go_to_main_ac funcion .

    MAIN            reduce using rule 2 (programa1 -> vars add_calc_vars_ac go_to_main_ac funcion .)


state 25

    (37) funcion -> funcion2 . funcion
    (37) funcion -> . funcion2 funcion
    (38) funcion -> . empty
    (40) funcion2 -> . funcion1 LPAREN vars add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac
    (134) empty -> .
    (39) funcion1 -> . tipo_funcion MODULE ID
    (17) tipo_funcion -> . tipo
    (18) tipo_funcion -> . VOID
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    MAIN            reduce using rule 134 (empty -> .)
    VOID            shift and go to state 30
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    funcion2                       shift and go to state 25
    funcion                        shift and go to state 35
    empty                          shift and go to state 26
    funcion1                       shift and go to state 27
    tipo_funcion                   shift and go to state 28
    tipo                           shift and go to state 29

state 26

    (38) funcion -> empty .

    MAIN            reduce using rule 38 (funcion -> empty .)


state 27

    (40) funcion2 -> funcion1 . LPAREN vars add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac

    LPAREN          shift and go to state 36


state 28

    (39) funcion1 -> tipo_funcion . MODULE ID

    MODULE          shift and go to state 37


state 29

    (17) tipo_funcion -> tipo .

    MODULE          reduce using rule 17 (tipo_funcion -> tipo .)


state 30

    (18) tipo_funcion -> VOID .

    MODULE          reduce using rule 18 (tipo_funcion -> VOID .)


state 31

    (33) vars_order -> VAR tipo COLON vars0 . SEMICOLON

    SEMICOLON       shift and go to state 38


state 32

    (34) vars0 -> ID . dim vars1
    (19) dim -> . LBRACK exp RBRACK dim1
    (20) dim -> . empty
    (134) empty -> .

    LBRACK          shift and go to state 40
    COMMA           reduce using rule 134 (empty -> .)
    SEMICOLON       reduce using rule 134 (empty -> .)

    dim                            shift and go to state 39
    empty                          shift and go to state 41

state 33

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac . bloque calc_temp_ac
    (8) bloque -> . LBRACE bloque1 return RBRACE

    LBRACE          shift and go to state 43

    bloque                         shift and go to state 42

state 34

    (3) add_main_jump_ac -> empty .

    LBRACE          reduce using rule 3 (add_main_jump_ac -> empty .)


state 35

    (37) funcion -> funcion2 funcion .

    MAIN            reduce using rule 37 (funcion -> funcion2 funcion .)


state 36

    (40) funcion2 -> funcion1 LPAREN . vars add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac
    (31) vars -> . vars_order vars
    (32) vars -> . empty
    (33) vars_order -> . VAR tipo COLON vars0 SEMICOLON
    (134) empty -> .

    VAR             shift and go to state 10
    RPAREN          reduce using rule 134 (empty -> .)

    vars                           shift and go to state 44
    vars_order                     shift and go to state 8
    empty                          shift and go to state 9

state 37

    (39) funcion1 -> tipo_funcion MODULE . ID

    ID              shift and go to state 45


state 38

    (33) vars_order -> VAR tipo COLON vars0 SEMICOLON .

    VAR             reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    VOID            reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    INT             reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    FLOAT           reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    CHAR            reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    MAIN            reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    RPAREN          reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)
    LBRACE          reduce using rule 33 (vars_order -> VAR tipo COLON vars0 SEMICOLON .)


state 39

    (34) vars0 -> ID dim . vars1
    (35) vars1 -> . COMMA ID dim vars1
    (36) vars1 -> . empty
    (134) empty -> .

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 134 (empty -> .)

    vars1                          shift and go to state 46
    empty                          shift and go to state 48

state 40

    (19) dim -> LBRACK . exp RBRACK dim1
    (67) exp -> . termino check_op_exp exp1
    (73) termino -> . factor check_op_term termino1
    (79) factor -> . LPAREN expresion RPAREN
    (80) factor -> . varCte
    (81) factor -> . push_id factor1
    (95) varCte -> . constructIntCons
    (96) varCte -> . constructFloatCons
    (97) varCte -> . constructCharCons
    (91) push_id -> . ID
    (98) constructIntCons -> . INTCTE
    (99) constructFloatCons -> . FLOATCTE
    (100) constructCharCons -> . CHARCTE

    LPAREN          shift and go to state 52
    ID              shift and go to state 58
    INTCTE          shift and go to state 59
    FLOATCTE        shift and go to state 60
    CHARCTE         shift and go to state 61

    exp                            shift and go to state 49
    termino                        shift and go to state 50
    factor                         shift and go to state 51
    varCte                         shift and go to state 53
    push_id                        shift and go to state 54
    constructIntCons               shift and go to state 55
    constructFloatCons             shift and go to state 56
    constructCharCons              shift and go to state 57

state 41

    (20) dim -> empty .

    COMMA           reduce using rule 20 (dim -> empty .)
    SEMICOLON       reduce using rule 20 (dim -> empty .)


state 42

    (1) programa -> PROGRAM add_DirFunc SEMICOLON programa1 MAIN LPAREN RPAREN add_main_jump_ac bloque . calc_temp_ac
    (4) calc_temp_ac -> . empty
    (134) empty -> .

    $end            reduce using rule 134 (empty -> .)

    calc_temp_ac                   shift and go to state 62
    empty                          shift and go to state 63

state 43

    (8) bloque -> LBRACE . bloque1 return RBRACE
    (9) bloque1 -> . estatuto bloque1
    (10) bloque1 -> . empty
    (45) estatuto -> . asignacion
    (46) estatuto -> . condicion
    (47) estatuto -> . write
    (48) estatuto -> . read
    (49) estatuto -> . forloop
    (50) estatuto -> . whileloop
    (51) estatuto -> . llamar_funcion
    (134) empty -> .
    (52) asignacion -> . push_id_assign dim_access EQUALS expresion SEMICOLON
    (120) condicion -> . IF LPAREN expresion RPAREN checkIfBool THEN bloque condicion1 endIf SEMICOLON
    (114) write -> . WRITE LPAREN write1 write2 RPAREN SEMICOLON
    (109) read -> . READ LPAREN read1 RPAREN SEMICOLON
    (130) forloop -> . FOR asignacion_for_ac TO exp DO do_ac bloque for_end_ac
    (126) whileloop -> . WHILE push_return_ac expresion handle_exp_ac DO bloque end_while_ac
    (101) llamar_funcion -> . verificar_funcion_ac llamar_funcion1 RPAREN validate_num_param_ac SEMICOLON
    (92) push_id_assign -> . ID
    (106) verificar_funcion_ac -> . ID LPAREN

    RETURN          reduce using rule 134 (empty -> .)
    RBRACE          reduce using rule 134 (empty -> .)
    IF              shift and go to state 75
    WRITE           shift and go to state 76
    READ            shift and go to state 77
    FOR             shift and go to state 78
    WHILE           shift and go to state 79
    ID              shift and go to state 81

    bloque1                        shift and go to state 64
    estatuto                       shift and go to state 65
    empty                          shift and go to state 66
    asignacion                     shift and go to state 67
    condicion                      shift and go to state 68
    write                          shift and go to state 69
    read                           shift and go to state 70
    forloop                        shift and go to state 71
    whileloop                      shift and go to state 72
    llamar_funcion                 shift and go to state 73
    push_id_assign                 shift and go to state 74
    verificar_funcion_ac           shift and go to state 80

state 44

    (40) funcion2 -> funcion1 LPAREN vars . add_param_tb_ac RPAREN SEMICOLON vars add_cont_vars_ac add_init_quad_temp_count_ac bloque end_func_ac
    (43) add_param_tb_ac -> . empty
    (134) empty -> .

    RPAREN          reduce using rule 134 (empty -> .)

    add_param_tb_ac                shift and go to state 82
    empty                          shift and go to state 83

state 45

    (39) funcion1 -> tipo_funcion MODULE ID .

    LPAREN          reduce using rule 39 (funcion1 -> tipo_funcion MODULE ID .)


state 46

    (34) vars0 -> ID dim vars1 .

    SEMICOLON       reduce using rule 34 (vars0 -> ID dim vars1 .)


state 47

    (35) vars1 -> COMMA . ID dim vars1

    ID              shift and go to state 84


state 48

    (36) vars1 -> empty .

    SEMICOLON       reduce using rule 36 (vars1 -> empty .)


state 49

    (19) dim -> LBRACK exp . RBRACK dim1

    RBRACK          shift and go to state 85


state 50

    (67) exp -> termino . check_op_exp exp1
    (72) check_op_exp -> . empty
    (134) empty -> .

    PLUS            reduce using rule 134 (empty -> .)
    MINUS           reduce using rule 134 (empty -> .)
    RBRACK          reduce using rule 134 (empty -> .)
    GRTR            reduce using rule 134 (empty -> .)
    LESS            reduce using rule 134 (empty -> .)
    EQEQ            reduce using rule 134 (empty -> .)
    NOTEQ           reduce using rule 134 (empty -> .)
    AND             reduce using rule 134 (empty -> .)
    OR              reduce using rule 134 (empty -> .)
    RPAREN          reduce using rule 134 (empty -> .)
    COMMA           reduce using rule 134 (empty -> .)
    DO              reduce using rule 134 (empty -> .)
    SEMICOLON       reduce using rule 134 (empty -> .)
    TO              reduce using rule 134 (empty -> .)

    check_op_exp                   shift and go to state 86
    empty                          shift and go to state 87

state 51

    (73) termino -> factor . check_op_term termino1
    (78) check_op_term -> . empty
    (134) empty -> .

    TIMES           reduce using rule 134 (empty -> .)
    DIV             reduce using rule 134 (empty -> .)
    PLUS            reduce using rule 134 (empty -> .)
    MINUS           reduce using rule 134 (empty -> .)
    RBRACK          reduce using rule 134 (empty -> .)
    GRTR            reduce using rule 134 (empty -> .)
    LESS            reduce using rule 134 (empty -> .)
    EQEQ            reduce using rule 134 (empty -> .)
    NOTEQ           reduce using rule 134 (empty -> .)
    AND             reduce using rule 134 (empty -> .)
    OR              reduce using rule 134 (empty -> .)
    RPAREN          reduce using rule 134 (empty -> .)
    COMMA           reduce using rule 134 (empty -> .)
    DO              reduce using rule 134 (empty -> .)
    SEMICOLON       reduce using rule 134 (empty -> .)
    TO              reduce using rule 134 (empty -> .)

    check_op_term                  shift and go to state 88
    empty                          shift and go to state 89

state 52

    (79) factor -> LPAREN . expresion RPAREN
    (53) expresion -> . expresion_cmp expresion1
    (59) expresion_cmp -> . exp expresion_cmp1
    (67) exp -> . termino check_op_exp exp1
    (73) termino -> . factor check_op_term termino1
    (79) factor -> . LPAREN expresion RPAREN
    (80) factor -> . varCte
    (81) factor -> . push_id factor1
    (95) varCte -> . constructIntCons
    (96) varCte -> . constructFloatCons
    (97) varCte -> . constructCharCons
    (91) push_id -> . ID
    (98) constructIntCons -> . INTCTE
    (99) constructFloatCons -> . FLOATCTE
    (100) constructCharCons -> . CHARCTE

    LPAREN          shift and go to state 52
    ID              shift and go to state 58
    INTCTE          shift and go to state 59
    FLOATCTE        shift and go to state 60
    CHARCTE         shift and go to state 61

    expresion                      shift and go to state 90
    expresion_cmp                  shift and go to state 91
    exp                            shift and go to state 92
    termino                        shift and go to state 50
    factor                         shift and go to state 51
    varCte                         shift and go to state 53
    push_id                        shift and go to state 54
    constructIntCons               shift and go to state 55
    constructFloatCons             shift and go to state 56
    constructCharCons              shift and go to state 57

state 53

    (80) factor -> varCte .

    TIMES           reduce using rule 80 (factor -> varCte .)
    DIV             reduce using rule 80 (factor -> varCte .)
    PLUS            reduce using rule 80 (factor -> varCte .)
    MINUS           reduce using rule 80 (factor -> varCte .)
    RBRACK          reduce using rule 80 (factor -> varCte .)
    GRTR            reduce using rule 80 (factor -> varCte .)
    LESS            reduce using rule 80 (factor -> varCte .)
    EQEQ            reduce using rule 80 (factor -> varCte .)
    NOTEQ           reduce using rule 80 (factor -> varCte .)
    AND             reduce using rule 80 (factor -> varCte .)
    OR              reduce using rule 80 (factor -> varCte .)
    RPAREN          reduce using rule 80 (factor -> varCte .)
    COMMA           reduce using rule 80 (factor -> varCte .)
    DO              reduce using rule 80 (factor -> varCte .)
    SEMICOLON       reduce using rule 80 (factor -> varCte .)
    TO              reduce using rule 80 (factor -> varCte .)


state 54

    (81) factor -> push_id . factor1
    (82) factor1 -> . llamar_funcion_factor
    (83) factor1 -> . dim_access
    (84) factor1 -> . DET det_ac
    (85) factor1 -> . TRAN tran_ac
    (86) factor1 -> . INV inv_ac
    (93) llamar_funcion_factor -> . verificar_funcion_ac_factor llamar_funcion1 RPAREN validate_num_param_ac
    (23) dim_access -> . verify_dims_ac exp RBRACK verify_range_ac dim_access1 calc_virtual_addess_ac
    (24) dim_access -> . empty
    (94) verificar_funcion_ac_factor -> . LPAREN
    (25) verify_dims_ac -> . LBRACK
    (134) empty -> .
